# FFmpeg

./: configure
doc/: muxers.texi
doc/examples/: CMakeLists.txt  avio_dir_cmd.c  avio_reading.c  decode_audio.c  decode_video.c  demuxing_decoding.c  encode_audio.c  encode_video.c  extract_mvs.c  filter_audio.c  filtering_audio.c  filtering_video.c  hw_decode.c  metadata.c  muxing.c  scaling_video.c  transcode_aac.c  transcoding.c  vaapi_encode.c  vaapi_transcode.c
fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  ffplay.c
libavcodec/: aac_ac3_parser.c  aac_parser.c  aacdec.c  aacdec_template.c  aacdectab.h  aacenc.c  allcodecs.c  amrnbdec.c  amrwbdec.c  audio_frame_queue.c  audiotoolboxdec.c  avcodec.h  avfft.c  avfft.h  avpacket.c  bytestream.h  codec_desc.c  decode.c  encode.c  flvdec.c  h264_parse.c  h264_parser.c  h264_ps.c  h264_sei.c  h264_slice.c  h264dec.c  h264dsp.c  internal.h  latm_parser.c  libfdk-aacdec.c  libfdk-aacenc.c  libopencore-amr.c  libopenh264enc.c  libopusdec.c  libopusenc.c  libx264.c  mediacodecdec.c  mpeg4audio.c  options.c  options_table.h  (+9 more)
libavdevice/: alldevices.c  avdevice.h
libavfilter/: af_acopy.c  af_aformat.c  af_anull.c  af_apad.c  af_resample.c  af_silencedetect.c  af_silenceremove.c  af_volume.c  af_volumedetect.c  allfilters.c  audio.c  avfilter.c  avfilter.h  avfiltergraph.c  buffersink.c  buffersink.h  buffersrc.c  dnn_backend_native.c  dnn_backend_native.h  dnn_backend_tf.c  dnn_backend_tf.h  dnn_interface.c  dnn_interface.h  f_zmq.c  formats.c  framepool.c  framequeue.c  framequeue.h  graphparser.c  trim.c  vf_blackframe.c  vf_copy.c  vf_derain.c  vf_format.c  vf_freezedetect.c  vf_libopencv.c  vf_null.c  vf_scale.c  vf_showinfo.c  vf_sr.c
libavformat/: aacdec.c  adtsenc.c  allformats.c  amr.c  avc.c  avformat.h  avio.c  avio.h  avio_internal.h  aviobuf.c  dump.c  file.c  flvdec.c  flvenc.c  format.c  hls.c  hlsenc.c  hlsproto.c  internal.h  latmenc.c  librtmp.c  mov.c  movenc.c  mpeg.c  mpeg.h  mux.c  pcm.c  (+30 more)
(+30 files in other folders)
